fix: make endpoints more consistent with swagger
